--- a/.env.dev
+++ b/.env.dev
@@ -7,7 +7,7 @@ POSTGRES_USERNAME=postgres
 POSTGRES_PASSWORD=12345678
 
 # Keycloak Configuration
-KEYCLOAK_SERVER_URL=http://localhost:8080
+KEYCLOAK_SERVER_URL=http://46.102.157.211:8180
 KEYCLOAK_REALM=opencare
 KEYCLOAK_CLIENT_ID=open-care-backend
 KEYCLOAK_CLIENT_SECRET=u3L5IEUSLoBoPzFghcMUvdSJSUedr6Fm
@@ -30,7 +30,7 @@ LOGGING_LEVEL_SQL=debug
 LOGGING_LEVEL_WEB=debug
 
 # MinIO Configuration
-MINIO_ENDPOINT=localhost:9000
+MINIO_ENDPOINT=46.102.157.211:9100
 MINIO_ACCESS_KEY=minioadmin
 MINIO_SECRET_KEY=minioadmin123
 MINIO_BUCKET_NAME=opencare
