--- a/.env.dev
+++ b/.env.dev
@@ -7,14 +7,14 @@ POSTGRES_USERNAME=postgres
 POSTGRES_PASSWORD=12345678
 
 # Keycloak Configuration
-KEYCLOAK_SERVER_URL=http://46.102.157.211:8180
+KEYCLOAK_SERVER_URL=https://keycloak.revlox.com
 KEYCLOAK_REALM=opencare
 KEYCLOAK_CLIENT_ID=open-care-backend
 KEYCLOAK_CLIENT_SECRET=u3L5IEUSLoBoPzFghcMUvdSJSUedr6Fm
 KEYCLOAK_ADMIN_REALM=master
 KEYCLOAK_ADMIN_CLIENT_ID=admin-cli
-KEYCLOAK_ADMIN_USERNAME=admin
-KEYCLOAK_ADMIN_PASSWORD=admin
+KEYCLOAK_ADMIN_USERNAME=sadimrul
+KEYCLOAK_ADMIN_PASSWORD=Ak@sHBhoRaTa1988Ra
 
 # Rate Limiting Configuration
 RATE_LIMITING_ENABLED=true
