--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,9 @@
         <java.version>21</java.version>
         <maven.version>3.10.0</maven.version>
         <mapstruct.version>1.6.3</mapstruct.version>
+        <lombok.version>1.18.32</lombok.version> <!-- Add this line -->
         <lombok.mapstruct.version>0.2.0</lombok.mapstruct.version>
+        <hibernate.version>6.4.4.Final</hibernate.version> <!-- Add this line -->
     </properties>
     <dependencies>
         <dependency>
