--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,11 +15,11 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
 
-      - name: Set up JDK 17
+      - name: Set up JDK 21  # Changed from 17 to 21
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
-          java-version: '17'
+          java-version: '21'
           cache: maven
 
       - name: Build with Maven
@@ -34,7 +34,7 @@ jobs:
     needs: build
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v4  # 🔹 Added back
+        uses: actions/checkout@v4
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
@@ -66,12 +66,18 @@ jobs:
     name: Deploy to Server
     runs-on: ubuntu-latest
     needs: docker
-    if: github.ref == 'refs/heads/dev'  # 🔹 Only run for the dev branch
+    if: github.ref == 'refs/heads/dev' || github.ref == 'refs/heads/qa' || github.ref == 'refs/heads/master'  # Added all branches
     steps:
       - name: Determine Environment Name
         id: env_name
         run: |
-          echo "ENV_NAME=dev" >> $GITHUB_ENV  # 🔹 Hardcoded to dev since this job only runs for dev
+          if [[ "${{ github.ref }}" == "refs/heads/dev" ]]; then
+            echo "ENV_NAME=dev" >> $GITHUB_ENV
+          elif [[ "${{ github.ref }}" == "refs/heads/qa" ]]; then
+            echo "ENV_NAME=qa" >> $GITHUB_ENV
+          elif [[ "${{ github.ref }}" == "refs/heads/master" ]]; then
+            echo "ENV_NAME=prod" >> $GITHUB_ENV
+          fi
 
       - name: SSH into Server and Deploy
         uses: appleboy/ssh-action@v0.1.10
@@ -81,10 +87,10 @@ jobs:
           password: ${{ secrets.SERVER_PASSWORD }}
           script: |
             docker pull ${{ secrets.DOCKER_USERNAME }}/open-care-backend:${{ env.ENV_NAME }}-latest
-            docker stop open-care-backend || true
-            docker rm open-care-backend || true
+            docker stop open-care-backend-${{ env.ENV_NAME }} || true
+            docker rm open-care-backend-${{ env.ENV_NAME }} || true
             docker system prune -af
-            docker run -d --name open-care-backend -p 6500:6500 --restart always \
+            docker run -d --name open-care-backend-${{ env.ENV_NAME }} -p 6500:6500 --restart always \
               --env SPRING_PROFILES_ACTIVE=${{ env.ENV_NAME }} \
               --env-file /root/open-care-backend/.env.${{ env.ENV_NAME }} \
               ${{ secrets.DOCKER_USERNAME }}/open-care-backend:${{ env.ENV_NAME }}-latest
