--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,6 +85,7 @@ jobs:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           password: ${{ secrets.SERVER_PASSWORD }}
+          port: ${{ secrets.SERVER_PORT }}
           script: |
             docker pull ${{ secrets.DOCKER_USERNAME }}/open-care-backend:${{ env.ENV_NAME }}-latest
             docker stop open-care-backend-${{ env.ENV_NAME }} || true
