--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,11 +87,11 @@ jobs:
           password: ${{ secrets.SERVER_PASSWORD }}
           port: ${{ secrets.SERVER_PORT }}
           script: |
-            docker pull ${{ secrets.DOCKER_USERNAME }}/open-care-backend:${{ env.ENV_NAME }}-latest
-            docker stop open-care-backend-${{ env.ENV_NAME }} || true
-            docker rm open-care-backend-${{ env.ENV_NAME }} || true
-            docker system prune -af
-            docker run -d --name open-care-backend-${{ env.ENV_NAME }} -p 6500:6500 --restart always \
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/open-care-backend:${{ env.ENV_NAME }}-latest
+            sudo docker stop open-care-backend-${{ env.ENV_NAME }} || true
+            sudo docker rm open-care-backend-${{ env.ENV_NAME }} || true
+            sudo docker system prune -af
+            sudo docker run -d --name open-care-backend-${{ env.ENV_NAME }} -p 6500:6500 --restart always \
               --env SPRING_PROFILES_ACTIVE=${{ env.ENV_NAME }} \
               --env-file /home/alwyzon/open-care-backend/.env.${{ env.ENV_NAME }} \
               ${{ secrets.DOCKER_USERNAME }}/open-care-backend:${{ env.ENV_NAME }}-latest
