--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ SERVER_PORT=6500
 
 # Database Configuration
 DB_HOSTNAME=localhost
+DB_PORT=5432
 POSTGRES_USERNAME=postgres
 POSTGRES_PASSWORD=12345678
 
