--- a/.env.prod
+++ b/.env.prod
@@ -2,7 +2,8 @@
 SERVER_PORT=6500
 
 # Database Configuration
-DB_HOSTNAME=localhost
+DB_HOSTNAME=46.102.157.211
+DB_PORT=6968
 POSTGRES_USERNAME=postgres
 POSTGRES_PASSWORD=12345678
 
