--- a/.env.dev
+++ b/.env.dev
@@ -4,8 +4,8 @@ SERVER_PORT=6500
 # Database Configuration
 DB_HOSTNAME=46.102.157.211
 DB_PORT=6968
-POSTGRES_USERNAME=postgres
-POSTGRES_PASSWORD=12345678
+POSTGRES_USERNAME=sadimrul
+POSTGRES_PASSWORD=MiniMacsad8#ImRuL1
 
 # Keycloak Configuration
 KEYCLOAK_SERVER_URL=https://keycloak.revlox.com
