add redis compose

--- a/.env.dev
+++ b/.env.dev
@@ -31,7 +31,7 @@ LOGGING_LEVEL_SQL=debug
 LOGGING_LEVEL_WEB=debug
 
 # MinIO Configuration
-MINIO_ENDPOINT=46.102.157.211:9100
+MINIO_ENDPOINT=http://46.102.157.211:9100
 MINIO_ACCESS_KEY=minioadmin
 MINIO_SECRET_KEY=minioadmin123
 MINIO_BUCKET_NAME=opencare
