--- a/src/main/resources/db/changelog/v-0.1.0/table.changelog.yaml
+++ b/src/main/resources/db/changelog/v-0.1.0/table.changelog.yaml
@@ -68,6 +68,6 @@ databaseChangeLog:
   - include:
       file: tables/advertisement_log.yaml
       relativeToChangelogFile: true
-#  - include:
-#      file: tables/advertisement_payment.yaml
-#      relativeToChangelogFile: true
+  - include:
+      file: tables/advertisement_payment.yaml
+      relativeToChangelogFile: true
