--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,10 @@ spring:
     username: ${POSTGRES_USERNAME:postgres}
     password: ${POSTGRES_PASSWORD:12345678}
 
+  jackson:
+    serialization:
+      fail-on-empty-beans: false
+
   jpa:
     show-sql: true
     hibernate:
