--- a/src/main/resources/db/changelog/v-0.1.0/tables/institution.yaml
+++ b/src/main/resources/db/changelog/v-0.1.0/tables/institution.yaml
@@ -27,6 +27,9 @@ databaseChangeLog:
                   name: bn_name
                   type: varchar(100)
               - column:
+                  name: image_url
+                  type: varchar(250)
+              - column:
                   name: established_year
                   type: int4
               - column:
