--- a/src/main/resources/db/changelog/v-0.1.0/tables/profile.yaml
+++ b/src/main/resources/db/changelog/v-0.1.0/tables/profile.yaml
@@ -28,8 +28,8 @@ databaseChangeLog:
                   name: email
                   type: varchar(100)
               - column:
-                  name: photo
-                  type: bytea
+                  name: image_url
+                  type: varchar(250)
               - column:
                   name: name
                   type: varchar(100)
