--- a/src/main/resources/db/changelog/v-0.1.0/seed.changelog.yaml
+++ b/src/main/resources/db/changelog/v-0.1.0/seed.changelog.yaml
@@ -84,6 +84,11 @@ databaseChangeLog:
             tableName: social_organization
             quotchar: '"'
         - loadData:
+            file: seeds/hospital_medical_test.csv
+            relativeToChangelogFile: true
+            tableName: hospital_medical_test
+            quotchar: '"'
+        - loadData:
             file: seeds/medicine.csv
             relativeToChangelogFile: true
             tableName: medicine
