initiate health data.

--- a/src/main/resources/db/changelog/v-0.1.0/table.changelog.yaml
+++ b/src/main/resources/db/changelog/v-0.1.0/table.changelog.yaml
@@ -71,3 +71,6 @@ databaseChangeLog:
   - include:
       file: tables/advertisement_payment.yaml
       relativeToChangelogFile: true
+  - include:
+      file: tables/health_vital.yaml
+      relativeToChangelogFile: true
