--- a/src/main/resources/db/changelog/v-0.1.0/tables/profile.yaml
+++ b/src/main/resources/db/changelog/v-0.1.0/tables/profile.yaml
@@ -43,6 +43,9 @@ databaseChangeLog:
                   name: date_of_birth
                   type: date
               - column:
+                  name: blood_group
+                  type: varchar(10)
+              - column:
                   name: address
                   type: varchar(512)
               - column:
