--- a/src/main/resources/db/changelog/v-0.1.0/tables/advertisement_log.yaml
+++ b/src/main/resources/db/changelog/v-0.1.0/tables/advertisement_log.yaml
@@ -28,7 +28,7 @@ databaseChangeLog:
                   type: VARCHAR(45)
               - column:
                   name: user_agent
-                  type: TEXT
+                  type: VARCHAR(255)
               - column:
                   name: district_id
                   type: INTEGER
