--- a/src/main/resources/db/changelog/v-0.1.0/tables/advertisement.yaml
+++ b/src/main/resources/db/changelog/v-0.1.0/tables/advertisement.yaml
@@ -19,7 +19,7 @@ databaseChangeLog:
                     nullable: false
               - column:
                   name: content
-                  type: TEXT
+                  type: VARCHAR(1000)
               - column:
                   name: image_url
                   type: VARCHAR(255)
