--- a/.env.dev
+++ b/.env.dev
@@ -35,3 +35,6 @@ MINIO_ENDPOINT=http://46.102.157.211:9100
 MINIO_ACCESS_KEY=minioadmin
 MINIO_SECRET_KEY=minioadmin123
 MINIO_BUCKET_NAME=opencare
+
+# Github Configuration
+GITHUB_TOKEN=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
