--- a/.env
+++ b/.env
@@ -35,3 +35,6 @@ MINIO_ENDPOINT=http://127.0.0.1:9000
 MINIO_ACCESS_KEY=minioadmin
 MINIO_SECRET_KEY=minioadmin123
 MINIO_BUCKET_NAME=opencare
+
+# Github Configuration
+GITHUB_TOKEN=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
