--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,7 +21,7 @@ spring:
       ddl-auto: update
 
   liquibase:
-    drop-first: true
+    drop-first: false
     default-schema: public
     change-log: classpath:db/changelog/db.changelog-master.yaml
 
@@ -110,3 +110,6 @@ minio:
 # GitHub Configuration
 github:
   token: ${GITHUB_TOKEN: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}
+  repositories:
+    - Cipher-Text/open-care-frontend
+    - Cipher-Text/opencare
