remove credential from environment

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ SERVER_PORT=6700
 
 # Database Configuration
 DB_HOSTNAME=localhost
+DB_PORT=5432
 POSTGRES_USERNAME=postgres
 POSTGRES_PASSWORD=12345678
 
@@ -34,3 +35,6 @@ MINIO_ENDPOINT=localhost:9000
 MINIO_ACCESS_KEY=minioadmin
 MINIO_SECRET_KEY=minioadmin123
 MINIO_BUCKET_NAME=opencare
+
+# Github Configuration
+GITHUB_TOKEN=ghp_your_github_token_here
