--- a/.env.prod
+++ b/.env.prod
@@ -2,10 +2,10 @@
 SERVER_PORT=6700
 
 # Database Configuration
-DB_HOSTNAME=46.102.157.211
-DB_PORT=6968
-POSTGRES_USERNAME=sadimrul
-POSTGRES_PASSWORD=MiniMacsad8#ImRuL1
+DB_HOSTNAME=localhost
+DB_PORT=5432
+POSTGRES_USERNAME=postgres
+POSTGRES_PASSWORD=12345678
 
 # Keycloak Configuration
 KEYCLOAK_SERVER_URL=http://localhost:8080
@@ -35,3 +35,6 @@ MINIO_ENDPOINT=localhost:9000
 MINIO_ACCESS_KEY=minioadmin
 MINIO_SECRET_KEY=minioadmin123
 MINIO_BUCKET_NAME=opencare
+
+# Github Configuration
+GITHUB_TOKEN=ghp_your_github_token_here
