--- a/.env
+++ b/.env
@@ -2,20 +2,20 @@
 SERVER_PORT=6700
 
 # Database Configuration
-DB_HOSTNAME=46.102.157.211
-DB_PORT=6968
+DB_HOSTNAME=localhost
+DB_PORT=5432
 POSTGRES_USERNAME=postgres
-POSTGRES_PASSWORD="MiniMacsad8#ImRuL1"
+POSTGRES_PASSWORD=12345678
 
 # Keycloak Configuration
-KEYCLOAK_SERVER_URL=https://keycloak.revlox.com
+KEYCLOAK_SERVER_URL=http://localhost:8080
 KEYCLOAK_REALM=opencare
 KEYCLOAK_CLIENT_ID=open-care-backend
 KEYCLOAK_CLIENT_SECRET=u3L5IEUSLoBoPzFghcMUvdSJSUedr6Fm
 KEYCLOAK_ADMIN_REALM=master
 KEYCLOAK_ADMIN_CLIENT_ID=admin-cli
-KEYCLOAK_ADMIN_USERNAME=sadimrul
-KEYCLOAK_ADMIN_PASSWORD=Ak@sHBhoRaTa1988Ra
+KEYCLOAK_ADMIN_USERNAME=admin
+KEYCLOAK_ADMIN_PASSWORD=admin
 
 # Rate Limiting Configuration
 RATE_LIMITING_ENABLED=true
@@ -31,7 +31,7 @@ LOGGING_LEVEL_SQL=debug
 LOGGING_LEVEL_WEB=debug
 
 # MinIO Configuration
-MINIO_ENDPOINT=http://46.102.157.211:9100
+MINIO_ENDPOINT=http://127.0.0.1:9000
 MINIO_ACCESS_KEY=minioadmin
 MINIO_SECRET_KEY=minioadmin123
 MINIO_BUCKET_NAME=opencare
