--- a/src/main/resources/db/changelog/v-0.1.0/table.changelog.yaml
+++ b/src/main/resources/db/changelog/v-0.1.0/table.changelog.yaml
@@ -74,3 +74,6 @@ databaseChangeLog:
   - include:
       file: tables/health_vital.yaml
       relativeToChangelogFile: true
+  - include:
+      file: tables/blood_donation.yaml
+      relativeToChangelogFile: true
