--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ SERVER_PORT=6700
 DB_HOSTNAME=localhost
 DB_PORT=5432
 POSTGRES_USERNAME=postgres
-POSTGRES_PASSWORD=123
+POSTGRES_PASSWORD=12345678
 
 # Keycloak Configuration
 KEYCLOAK_SERVER_URL=http://localhost:8080
