--- a/src/main/resources/db/changelog/v-0.1.0/tables/profile.yaml
+++ b/src/main/resources/db/changelog/v-0.1.0/tables/profile.yaml
@@ -78,6 +78,15 @@ databaseChangeLog:
               - column:
                   constraints:
                     nullable: false
+                  name: is_blood_donor
+                  type: boolean
+                  defaultValueBoolean: false
+              - column:
+                  name: last_blood_donation_date
+                  type: timestamp
+              - column:
+                  constraints:
+                    nullable: false
                   name: is_active
                   type: boolean
                   defaultValueBoolean: true
