--- a/src/main/resources/db/changelog/v-0.1.0/table.changelog.yaml
+++ b/src/main/resources/db/changelog/v-0.1.0/table.changelog.yaml
@@ -77,3 +77,6 @@ databaseChangeLog:
   - include:
       file: tables/blood_donation.yaml
       relativeToChangelogFile: true
+  - include:
+      file: tables/blood_requisition.yaml
+      relativeToChangelogFile: true
