--- a/src/main/resources/db/changelog/v-0.1.0/tables/hospital.yaml
+++ b/src/main/resources/db/changelog/v-0.1.0/tables/hospital.yaml
@@ -22,6 +22,7 @@ databaseChangeLog:
                   type: varchar(100)
               - column:
                   name: registration_code
+                  type: varchar(50)
               - column:
                   name: image_url
                   type: varchar(250)
