--- a/src/main/resources/db/changelog/v-0.1.0/table.changelog.yaml
+++ b/src/main/resources/db/changelog/v-0.1.0/table.changelog.yaml
@@ -80,3 +80,6 @@ databaseChangeLog:
   - include:
       file: tables/blood_requisition.yaml
       relativeToChangelogFile: true
+  - include:
+      file: tables/ambulance.yaml
+      relativeToChangelogFile: true
