add registration page.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,17 +16,17 @@ services:
       - --import-realm
     environment:
       KC_DB: postgres
-      KC_DB_URL_HOST: 46.102.157.211
-      KC_DB_URL_PORT: 6968
+      KC_DB_URL_HOST: localhost
+      KC_DB_URL_PORT: 5432
       KC_DB_URL_DATABASE: open_care_keycloak
       KC_DB_SCHEMA: public
       KC_DB_USERNAME: postgres
-      KC_DB_PASSWORD: MiniMacsad8#ImRuL1
+      KC_DB_PASSWORD: 12345678
       KEYCLOAK_ADMIN: admin
       KEYCLOAK_ADMIN_PASSWORD: admin
       KC_HTTP_ENABLED: "true"
     ports:
-      - "8180:8080"
+      - "8080:8080"
 
   # MinIO Object Storage
   minio:
