Feat: this adds advertisement and advertisementType basic CRUD and testing partially remaining

--- a/keycloak-docker-compose.yml
+++ b/keycloak-docker-compose.yml
@@ -3,6 +3,8 @@ services:
           image: postgres:16
           volumes:
                - postgres_data:/var/lib/postgresql/data
+          ports:
+               - "5444:5432"
           environment:
                POSTGRES_DB: keycloak
                POSTGRES_USER: keycloak
