--- a/.env.prod
+++ b/.env.prod
@@ -36,5 +36,8 @@ MINIO_ACCESS_KEY=minioadmin
 MINIO_SECRET_KEY=minioadmin123
 MINIO_BUCKET_NAME=opencare
 
+# MinIO Data Directory
+MINIO_DATA_DIR=/home/sadman/Documents/Personal/opencare-minio
+
 # Github Configuration
 GITHUB_TOKEN=ghp_your_github_token_here
